--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -280,55 +280,17 @@
 		vertical-align: super;
 	}
 	.xui-loading-img{
-		animation: loading 1s infinite;
-		-webkit-animation: loading 1s infinite;
+		animation: loading 1s linear infinite;
+		-webkit-animation: loading 1s linear infinite;
 	}
 	@keyframes loading
 		{
 		0%    {transform: rotate(0deg);}
-		5%	  {transform: rotate(18deg);}
-		10%   {transform: rotate(36deg);}
-		15%   {transform: rotate(54deg);}
-		20%	  {transform: rotate(72deg);}
-		25%	  {transform: rotate(90deg);}
-		30%   {transform: rotate(108deg);}
-		35%	  {transform: rotate(126deg);}
-		40%   {transform: rotate(144deg);}
-		45%   {transform: rotate(162deg);}
-		50%   {transform: rotate(180deg);}
-		55%	  {transform: rotate(196deg);}
-		60%   {transform: rotate(216deg);}
-		65%   {transform: rotate(234deg);}
-		70%   {transform: rotate(252deg);}
-		75%	  {transform: rotate(270deg);}
-		80%   {transform: rotate(288deg);}
-		85%   {transform: rotate(306deg);}
-		90%   {transform: rotate(324deg);}
-		95%   {transform: rotate(342deg);}
 		100%  {transform: rotate(360deg);}
 	}
 	@-webkit-keyframes loading
 		{
 		0%    {transform: rotate(0deg);}
-		5%	  {transform: rotate(18deg);}
-		10%   {transform: rotate(36deg);}
-		15%   {transform: rotate(54deg);}
-		20%	  {transform: rotate(72deg);}
-		25%	  {transform: rotate(90deg);}
-		30%   {transform: rotate(108deg);}
-		35%	  {transform: rotate(126deg);}
-		40%   {transform: rotate(144deg);}
-		45%   {transform: rotate(162deg);}
-		50%   {transform: rotate(180deg);}
-		55%	  {transform: rotate(196deg);}
-		60%   {transform: rotate(216deg);}
-		65%   {transform: rotate(234deg);}
-		70%   {transform: rotate(252deg);}
-		75%	  {transform: rotate(270deg);}
-		80%   {transform: rotate(288deg);}
-		85%   {transform: rotate(306deg);}
-		90%   {transform: rotate(324deg);}
-		95%   {transform: rotate(342deg);}
 		100%  {transform: rotate(360deg);}
 	}
 	.xui-loading-wrap{
