--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -324,40 +324,25 @@
 			return result;
 		}
 		//获取message_count
-		if(localStorage.getItem('message_count') ==null){
-			$.ajax({
+        $.ajax({
 			url:'{{fans_host}}/count/message_count/',
 			type:'post',
 			dataType:'jsonp',
 			success:function(response) {
 				if (response.code == 200) {
-					localStorage.message_count=response.data.message_count;
-					if(localStorage.message_count!=0){
-						$("#message_count").html(localStorage.message_count);
-						$("#message_count_inner").html(localStorage.message_count);
+					var message_count=response.data.message_count;
+					if(message_count != 0){
+						$("#message_count").html(message_count);
+						$("#message_count_inner").html(message_count);
 						$("#popover838423").css('display','inline');
 						$("#message_count").css('display','inline');
-						$("#message_href").attr("href","javascript:void(0);");
+						$("#message_href").attr("href","{{ fans_host }}/message/message_list/?from=portal");
 					}
-
 				}else{
 					xlog("获取message_count失败")
 				}
 			}
 		});
-		}else{
-			if(localStorage.message_count!=0){
-				$("#message_count").html(localStorage.message_count)
-				$("#message_count_inner").html(localStorage.message_count)
-				$("#message_count").css('display','inline');
-				$("#popover838423").css('display','inline');
-
-			}else{
-
-				$("#message_href").attr("href","{{ fans_host }}/message/message_list/?from=portal");
-			}
-
-		}
 
 		function initSubmit(){
 			$('#old_password').val('');
